# microflow

./: .gitignore  README.md  __init__.py  api.py  app.py  async.py  control.py  event_store.py  exec_result.py  flow.py  instance.py  instance2.py  manager.py  pyproject.toml  run_queue.py  run_strategy.py  runnable.py  runner.py  tasks.py  test.py
chunks/: api.py  debug.py
flow-ui/: package-lock.json  package.json
flow-ui/app/: globals.css  layout.tsx
flow-ui/app/runs/: page.tsx
flow-ui/src/: index.css
flow-ui/src/pages/: Status.js
gui/: package-lock.json  package.json
gui/src/: App.js
microflow/: __init__.py  api.py  cli.py  control.py  event_store.py  exec_result.py  flow.py  run_queue.py  run_strategy.py  runnable.py  runner.py  utils.py
src/microflow/: .gitignore  __init__.py  api.py  cli.py  control.py  dbt_integration.py  event_store.py  exec_result.py  flow.py  run.py  run_queue.py  runnable.py  runner.py  utils.py
tests/: test_run_queue.py  test_runnable_nested.py  test_runnable_simple.py  test_runner.py
